--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,37 @@ buildNumber.properties
 .classpath
 
 # End of https://www.toptal.com/developers/gitignore/api/java,maven
+
+*#
+.#*
+/*.yaml
+/*.yml
+*.exe
+
+/prometheus
+/promtool
+benchmark.txt
+/data
+/data-agent
+/cmd/prometheus/data
+/cmd/prometheus/data-agent
+/cmd/prometheus/debug
+/benchout
+/cmd/promtool/data
+
+!/.travis.yml
+!/.promu.yml
+!/.golangci.yml
+/documentation/examples/remote_storage/remote_storage_adapter/remote_storage_adapter
+/documentation/examples/remote_storage/example_write_adapter/example_write_adapter
+
+npm_licenses.tar.bz2
+/web/ui/static/react
+
+/vendor
+/.build
+
+/**/node_modules
+
+# Ignore parser debug
+y.output
