Monitoramento - Aula 1 - Dashboards com Grafana

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -74,6 +74,7 @@ services:
       - app-forum-api
 
   prometheus-forum-api:
+    user: root:root
     image: prom/prometheus:latest
     container_name: prometheus-forum-api
     restart: unless-stopped
@@ -94,6 +95,19 @@ services:
     depends_on:
       - proxy-forum-api
 
+  grafana-forum-api:
+    image: grafana/grafana
+    container_name: grafana-forum-api
+    volumes:
+      - ./grafana:/var/lib/grafana
+    restart: unless-stopped
+    ports:
+      - 3000:3000
+    networks:
+      - monit
+    depends_on:
+      - prometheus-forum-api
+
   client-forum-api:
     build:
       context: ./client/
@@ -104,4 +118,4 @@ services:
     networks:
       - proxy
     depends_on:
-      - proxy-forum-api
+      - grafana-forum-api
